fix dark mode toggle alignment

--- a/src/assets/sass/root.scss
+++ b/src/assets/sass/root.scss
@@ -277,7 +277,7 @@
   #dark-mode-toggle {
     z-index: 1000;
     position: absolute;
-    top: calc(10 / 16 * 1rem);
+    top: 2.5px;
     right: calc(70 / 16 * 1rem);
     display: block;
     border: none;
